header desktop 'Get Started' link fix color contrast

--- a/style/_header.scss
+++ b/style/_header.scss
@@ -44,7 +44,6 @@
                     display: none;
                 }
     
-    
                 a {
                     cursor: pointer;
                     text-decoration: none;
@@ -97,7 +96,7 @@
                     
                     a {
                         box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
-                        background: $bright-red;
+                        background: #DD370E;
                         padding: 1rem 1.5rem;
                         border-radius: 3rem;
                         color: #fff;
