--- a/style/style.css
+++ b/style/style.css
@@ -112,7 +112,7 @@ img {
   }
   header nav .nav-ul .pushed_to_the_right_link a {
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
-    background: hsl(12deg, 88%, 59%);
+    background: #DD370E;
     padding: 1rem 1.5rem;
     border-radius: 3rem;
     color: #fff;
